[gd_scene load_steps=9 format=3 uid="uid://dbbso5uwwuxgj"]

[ext_resource type="PackedScene" uid="uid://ddoae0mori3pk" path="res://Scenes/Options_Menu/options_menu.tscn" id="1_3t8lw"]
[ext_resource type="Script" path="res://Scripts/high_score.gd" id="2_a5yck"]
[ext_resource type="LabelSettings" uid="uid://bky1vrgiypi5y" path="res://Themes/Heading.tres" id="3_xh28d"]
[ext_resource type="StyleBox" uid="uid://b87qtyrs1lmln" path="res://Themes/focus_button.tres" id="4_j4km0"]
[ext_resource type="StyleBox" uid="uid://cq6uwucrpshjw" path="res://Themes/hover_button.tres" id="5_e5bw2"]
[ext_resource type="StyleBox" uid="uid://bbxpk3ml1lhkj" path="res://Themes/disabled_button.tres" id="5_fdf3b"]
[ext_resource type="StyleBox" uid="uid://vdewpxotoj85" path="res://Themes/pressed_button.tres" id="6_6totd"]
[ext_resource type="StyleBox" uid="uid://7h1vh5u5djjd" path="res://Themes/normal_button.tres" id="7_gjsmg"]

[node name="HighScore" instance=ExtResource("1_3t8lw")]
script = ExtResource("2_a5yck")

[node name="Label" type="Label" parent="Panel/MarginContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "High Scores"
label_settings = ExtResource("3_xh28d")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" parent="Panel/MarginContainer/HBoxContainer" index="0"]
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
offset_left = -280.0
offset_top = -48.0
offset_right = 280.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Pong" type="Button" parent="HBoxContainer" index="0"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_styles/focus = ExtResource("4_j4km0")
theme_override_styles/disabled = ExtResource("5_fdf3b")
theme_override_styles/hover = ExtResource("5_e5bw2")
theme_override_styles/pressed = ExtResource("6_6totd")
theme_override_styles/normal = ExtResource("7_gjsmg")
text = "Pong"

[node name="BrickBreaker" type="Button" parent="HBoxContainer" index="1"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_styles/focus = ExtResource("4_j4km0")
theme_override_styles/disabled = ExtResource("5_fdf3b")
theme_override_styles/hover = ExtResource("5_e5bw2")
theme_override_styles/pressed = ExtResource("6_6totd")
theme_override_styles/normal = ExtResource("7_gjsmg")
text = "Brick Breaker"

[node name="BallBreaker" type="Button" parent="HBoxContainer" index="2"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_styles/focus = ExtResource("4_j4km0")
theme_override_styles/disabled = ExtResource("5_fdf3b")
theme_override_styles/hover = ExtResource("5_e5bw2")
theme_override_styles/pressed = ExtResource("6_6totd")
theme_override_styles/normal = ExtResource("7_gjsmg")
text = "Ball Breaker"

[connection signal="button_down" from="Panel/MarginContainer/HBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
[connection signal="button_up" from="Panel/MarginContainer/HBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
[connection signal="pressed" from="HBoxContainer/Pong" to="." method="_on_pong_pressed"]
[connection signal="pressed" from="HBoxContainer/BrickBreaker" to="." method="_on_brick_breaker_pressed"]
[connection signal="pressed" from="HBoxContainer/BallBreaker" to="." method="_on_ball_breaker_pressed"]
